--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-# This config was automatically generated from your source code
-# Stacks detected: cicd:github-actions:.github/workflows,deps:node:.
 version: 2.1
 orbs:
   node: circleci/node@5
@@ -9,19 +7,22 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - node/install-packages:
-          pkg-manager: npm
       - run:
-          name: Run install
+          name: Run npm install
           command: npm install
+      - run:
+          name: Run tests
+          command: npm test
   build-node:
     # Build node project
     executor: node/default
     steps:
       - checkout
-      - node/install-packages:
-          pkg-manager: npm
       - run:
+          name: Run npm install
+          command: npm install
+      - run:
+          name: Build project
           command: npm run build
 workflows:
   build-and-test:
@@ -30,6 +31,3 @@ workflows:
       - build-node:
           requires:
             - test-node
-    # - deploy:
-    #     requires:
-    #       - build-node
